# FGIRC

./: CMakeLists.txt  FGIRC.cpp  FGIRC.h
IRCClient/: CMakeLists.txt  README.txt
